Close all tabs link is cut, tabsheet spacer of vaadin overlaps bottom of link, fix applied, CSS fix. No story

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -724,3 +724,8 @@
 .green {
     background: green !important;
 }
+
+.closeAllTabsListManagerPosition span span {
+	position: relative;
+	top: -4px;
+}
